--- a/package.json
+++ b/package.json
@@ -21,23 +21,16 @@
   },
   "homepage": "https://github.com/deminsvd/dom#readme",
   "devDependencies": {
-    "@babel/cli": "^7.28.3",
-    "@babel/core": "^7.28.5",
-    "@babel/preset-env": "^7.28.5",
     "babel-loader": "^10.0.0",
+    "core-js": "^3.46.0",
     "css-loader": "^7.1.2",
     "eslint": "^9.39.1",
     "eslint-webpack-plugin": "^5.0.2",
-    "jest": "^30.2.0",
-    "jest-babel": "^1.0.1",
+    "html-webpack-plugin": "^5.6.4",
     "mini-css-extract-plugin": "^2.9.4",
     "webpack": "^5.102.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2",
     "webpack-merge": "^6.0.1"
-  },
-  "dependencies": {
-    "core-js": "^3.46.0",
-    "html-webpack-plugin": "^5.6.4"
   }
 }
