--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "dom",
   "version": "1.0.0",
-  "type": "module",
   "description": "Правила сдачи задания:",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --mode development",
@@ -21,10 +21,12 @@
   },
   "homepage": "https://github.com/deminsvd/dom#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.28.5",
     "babel-loader": "^10.0.0",
     "core-js": "^3.46.0",
     "css-loader": "^7.1.2",
     "eslint": "^9.39.1",
+    "eslint-define-config": "^2.1.0",
     "eslint-webpack-plugin": "^5.0.2",
     "html-webpack-plugin": "^5.6.4",
     "mini-css-extract-plugin": "^2.9.4",
