esmodule lint commit

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "webpack serve --mode development",
     "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint --ignore-pattern 'dist/'"
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx ./src"
   },
   "repository": {
     "type": "git",
